<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.abc666.neverlost.ui.SecurityActivity"
    android:weightSum="3"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="50dp">

        <EditText
            android:id="@+id/et_sphoneNumber"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_edittext"
            android:ems="10"
            android:inputType="phone"
            android:maxLength="11"
            android:digits="1234567890"/>

        <TextView
            android:id="@+id/tv_sphoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/et_sphoneNumber"
            android:layout_alignLeft="@+id/et_sphoneNumber"
            android:layout_alignStart="@+id/et_sphoneNumber"
            android:layout_marginBottom="20dp"
            android:text="@string/sphone_number" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <EditText
            android:id="@+id/et_locKey"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_edittext"
            android:ems="10"
            />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/et_locKey"
            android:layout_alignLeft="@+id/et_locKey"
            android:layout_alignStart="@+id/et_locKey"
            android:layout_marginBottom="20dp"
            android:text="@string/security_message" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2">


        <Button
            android:id="@+id/btn_sphoneOk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/sure" />

        <Button
            android:id="@+id/btn_sphoneCancle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>
