<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorActivityBackground"
    android:orientation="vertical"
    tools:context="com.abc666.neverlost.ui.SettingActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:paddingLeft="12dp"
                android:text="@string/auto_protect_mode"
                tools:ignore="RtlHardcoded" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="#fff"
                app:cardCornerRadius="3dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/ll_protect_pocket"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="12dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_weight="1"
                            android:text="口袋模式"
                            tools:ignore="RtlHardcoded" />

                        <com.suke.widget.SwitchButton
                            android:id="@+id/sb_protect_pocket"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:sb_checked="true" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/divider" />

                    <LinearLayout
                        android:id="@+id/ll_protect_usb"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="12dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_weight="1"
                            android:text="USB模式"
                            tools:ignore="RtlHardcoded" />

                        <com.suke.widget.SwitchButton
                            android:id="@+id/sb_protect_usb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:sb_checked="true" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:paddingLeft="12dp"
                android:text="防护开启" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="#fff"
                app:cardCornerRadius="3dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/ll_protect_delay"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="12dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_weight="1"
                            android:text="开启灵敏度（延时）"
                            tools:ignore="RtlHardcoded" />

                        <TextView
                            android:id="@+id/tv_protect_delay"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="一般(3s)" />

                        <android.support.v7.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_next_gray_24dp"
                            tools:ignore="VectorDrawableCompat" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/divider" />

                    <LinearLayout
                        android:id="@+id/ll_protect_tone"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="12dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_weight="1"
                            android:text="提示音"
                             />

                        <TextView
                            android:id="@+id/tv_protect_tone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="锁车音" />

                        <android.support.v7.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_next_gray_24dp"
                            tools:ignore="VectorDrawableCompat" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/divider" />

                    <LinearLayout
                        android:id="@+id/ll_protect_vibrator"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="12dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_weight="1"
                            android:text="震动提示"
                            tools:ignore="RtlHardcoded" />

                        <com.suke.widget.SwitchButton
                            android:id="@+id/sb_protect_vibrator"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:sb_checked="true" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:paddingLeft="12dp"
                android:text="@string/sphone_card" />
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="#fff"
                app:cardCornerRadius="3dp"
                app:cardElevation="2dp">
                <LinearLayout
                    android:id="@+id/sphoneInput"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <Button
                        android:id="@+id/btn_select_sphone"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="12dp"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:text="@string/select_sphone"
                        tools:ignore="RtlHardcoded" />

                </LinearLayout>


            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
